--- a/marketplace/templates/product_detail.html
+++ b/marketplace/templates/product_detail.html
@@ -283,7 +283,7 @@
             <div class="my_title_main justify-content-center">
                 <div class="my_title_inner text-center" id="my_title_inner2">
                     <span>Featured This Week</span>
-                    <h1>Your Might Also Like</h1>
+                    <h1>You Might Also Like</h1>
                 </div>
             </div>
             <div class="row">
